Fix picker button visibility issue

--- a/src/css/includes/picker-button.scss
+++ b/src/css/includes/picker-button.scss
@@ -1,5 +1,6 @@
 .pbtn-remove {
 	visibility: hidden;
+	display: none;
 	float: left;
 	margin-right: 15px;
 	margin-top: 6px;
@@ -12,6 +13,7 @@
 	}
 	&.visible {
 		visibility: visible;
+		display: block;
 	}
 }
 .pbtn-add {
